--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-    "name": "zoliszabo/rector-cli-docker",
-    "description": "Composer installer / wrapper for running Rector via Docker.",
+    "name": "zoliszabo/rector-docker",
+    "description": "A Composer-based wrapper for running Rector via Docker.",
     "type": "project",
     "license": "MIT",
     "bin": [
-        "bin/rector-cli-docker"
+        "bin/rector-docker"
     ]
 }
