composer.json: change package type to "library"

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "zoliszabo/rector-docker",
     "description": "A Composer-based wrapper for running Rector via Docker.",
-    "type": "project",
+    "type": "library",
     "license": "MIT",
     "bin": [
         "bin/rector-docker"
