--- a/.github/workflows/dockerhub-publish.yml
+++ b/.github/workflows/dockerhub-publish.yml
@@ -50,8 +50,8 @@ jobs:
         id: generate_token
         uses: actions/create-github-app-token@v1
         with:
-          app-id: ${{ env.APP_ID }}
-          private-key: ${{ secrets.APP_PRIVATE_KEY }}
+          app-id: ${{ vars.RECTOR_DOCKER_AUTOMATION_APP_ID }}
+          private-key: ${{ secrets.RECTOR_DOCKER_AUTOMATION_APP_PRIVATE_KEY }}
 
       - name: Trigger update in rector-docker-composer repository
         uses: peter-evans/repository-dispatch@v3
